# myEngine

./: CMakeLists.txt
.cache/clangd/index/: common.h.CAEB75CC84B33CD0.idx  engine.c.274E444756A67A13.idx  engine.h.556233309A3A4E5D.idx  game.c.7CC7BEE6870CE5C5.idx  game.h.2642D329D306A03D.idx  graphics.c.D99BAAC881A06A56.idx  graphics.h.146D5364DBD61FEA.idx  input.c.7562690780A891FE.idx  input.h.A95D5BBF748CC5EA.idx  main.c.2486F9472A0461C2.idx  texture-manager.c.8D49E316980782FE.idx  texture-manager.h.363BFE59D2D1F07B.idx  window.c.B4A21D27BE0C43D5.idx  window.h.0627BFC3F712AA16.idx
include/: common.h  game.h  graphics.h  input.h  texture-manager.h  window.h
src/: game.c  graphics.c  input.c  main.c  texture-manager.c  window.c
